--- a/org.jacoco.doc/pom.xml
+++ b/org.jacoco.doc/pom.xml
@@ -178,7 +178,7 @@
                   <fileset dir="../org.jacoco.ant.test/target" includes="surefire-reports/**/*.xml"/>
                   <fileset dir="../org.jacoco.core.test/target" includes="surefire-reports/**/*.xml"/>
                   <fileset dir="../org.jacoco.report.test/target" includes="surefire-reports/**/*.xml"/>
-                  <report format="noframes" styledir="junitstyle" todir="${project.build.directory}/junit">
+                  <report format="noframes" styledir="xsl" todir="${project.build.directory}/junit">
                     <param name="qualified.bundle.version" expression="${qualified.bundle.version}"/>
                     <param name="jacoco.home.url" expression="${jacoco.home.url}"/>
                     <param name="copyright.years" expression="${copyright.years}"/>
@@ -246,6 +246,34 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>xml-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>transform</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <transformationSets>
+            <transformationSet>
+              <dir>../jacoco-maven-plugin/target/generated-site/xdoc</dir>
+              <includes>
+                <include>*.xml</include>
+              </includes>
+              <stylesheet>xsl/maven-goal.xsl</stylesheet>
+              <fileMappers>
+                <fileMapper implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
+                  <targetExtension>.html</targetExtension>
+                </fileMapper>
+              </fileMappers>
+            </transformationSet>
+          </transformationSets>
+        </configuration>
       </plugin>
 
       <plugin>
