--- a/org.jacoco.doc/pom.xml
+++ b/org.jacoco.doc/pom.xml
@@ -271,6 +271,20 @@
                   <targetExtension>.html</targetExtension>
                 </fileMapper>
               </fileMappers>
+              <parameters>
+                <parameter>
+                  <name>qualified.bundle.version</name>
+                  <value>${qualified.bundle.version}</value>
+                </parameter>
+                <parameter>
+                  <name>jacoco.home.url</name>
+                  <value>${jacoco.home.url}</value>
+                </parameter>
+                <parameter>
+                  <name>copyright.years</name>
+                  <value>${copyright.years}</value>
+                </parameter>
+              </parameters>
             </transformationSet>
           </transformationSets>
         </configuration>
