--- a/org.jacoco.build/pom.xml
+++ b/org.jacoco.build/pom.xml
@@ -171,6 +171,12 @@
       </dependency>
       <dependency>
         <groupId>${project.groupId}</groupId>
+        <artifactId>org.jacoco.agent</artifactId>
+        <classifier>runtime</classifier>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
         <artifactId>org.jacoco.agent.rt</artifactId>
         <version>${project.version}</version>
       </dependency>
