Partially revert r1673: output folder for Eclipse should be 'bin' instead of 'target/classes'

--- a/org.jacoco.agent.rt.test/build.properties
+++ b/org.jacoco.agent.rt.test/build.properties
@@ -1,5 +1,5 @@
 source.. = src/
-output.. = target/classes/
+output.. = bin/
 bin.includes = META-INF/,\
                .,\
                about.html
