--- a/org.jacoco.ant.test/build.properties
+++ b/org.jacoco.ant.test/build.properties
@@ -1,5 +1,5 @@
 source.. = src/
-output.. = target/classes/
+output.. = bin/
 bin.includes = META-INF/,\
                .,\
                about.html
