--- a/org.jacoco.build/pom.xml
+++ b/org.jacoco.build/pom.xml
@@ -873,6 +873,7 @@
                         <ignore></ignore>
                       </action>
                     </pluginExecution>
+                    <!-- Relates to Trac #158 -->
                     <pluginExecution>
                       <pluginExecutionFilter>
                         <groupId>org.jacoco</groupId>
