Fix GAV coordinates for ASM 4.0

--- a/org.jacoco.build/pom.xml
+++ b/org.jacoco.build/pom.xml
@@ -132,7 +132,7 @@
     <tycho.version>0.13.0</tycho.version>
 
     <!-- Dependencies versions -->
-    <asm.version>3.3.1</asm.version>
+    <asm.version>4.0</asm.version>
     <ant.version>1.7.0</ant.version>
     <junit.version>4.8.2</junit.version>
 
@@ -192,13 +192,8 @@
       </dependency>
       <!-- Third-party dependencies -->
       <dependency>
-        <groupId>asm</groupId>
-        <artifactId>asm</artifactId>
-        <version>${asm.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>asm</groupId>
-        <artifactId>asm-commons</artifactId>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm-all</artifactId>
         <version>${asm.version}</version>
       </dependency>
       <dependency>
