--- a/org.jacoco.report/pom.xml
+++ b/org.jacoco.report/pom.xml
@@ -31,6 +31,10 @@
       <groupId>${project.groupId}</groupId>
       <artifactId>org.jacoco.core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm-all</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
